{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 154,
  "lineage": "6594ae5b-7b9d-5130-2312-39860da429eb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08de056194e85f480",
            "arn": "arn:aws:ec2:us-west-1:566027688242:elastic-ip/eipalloc-08de056194e85f480",
            "domain": "vpc",
            "id": "eipalloc-08de056194e85f480",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-52-53-90-15.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.90.15",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d49b144f3ee2dc4",
            "arn": "arn:aws:ec2:us-west-1:566027688242:instance/i-0246ddb30292e6647",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0246ddb30292e6647",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01995073e04a8945a",
            "private_dns": "ip-10-0-2-65.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0af55862b0b53cb57",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fc1fe347d6f0c367",
            "tags": {
              "Name": "private_instance_1"
            },
            "tags_all": {
              "Name": "private_instance_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-095afc13b87ab9c1b"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform_kp",
            "aws_security_group.allow_ssh",
            "aws_subnet.terraform_private_subnet_1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d49b144f3ee2dc4",
            "arn": "arn:aws:ec2:us-west-1:566027688242:instance/i-01506e94c3e511e83",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01506e94c3e511e83",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0be6029a0bddce522",
            "private_dns": "ip-10-0-1-85.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.85",
            "public_ip": "52.53.160.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d5a4f47ab8db6087",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ede0367df412870b",
            "tags": {
              "Name": "public_instance"
            },
            "tags_all": {
              "Name": "public_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-095afc13b87ab9c1b"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform_kp",
            "aws_security_group.allow_ssh",
            "aws_subnet.terraform_public_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:566027688242:internet-gateway/igw-0c68c40af066ea338",
            "id": "igw-0c68c40af066ea338",
            "owner_id": "566027688242",
            "tags": {
              "Name": "Terraform Internet Gateway"
            },
            "tags_all": {
              "Name": "Terraform Internet Gateway"
            },
            "vpc_id": "vpc-0597359c1584b836d"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform_natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08de056194e85f480",
            "association_id": "eipassoc-08c68e12f96e3ed1c",
            "connectivity_type": "public",
            "id": "nat-05d82a114fd3d234a",
            "network_interface_id": "eni-025532ab4ca4931bd",
            "private_ip": "10.0.1.36",
            "public_ip": "52.53.90.15",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ede0367df412870b",
            "tags": {
              "Name": "terraform-natgateway"
            },
            "tags_all": {
              "Name": "terraform-natgateway"
            }
          },
          "dependencies": [
            "aws_eip.terraform_eip",
            "aws_subnet.terraform_public_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_rt_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:566027688242:route-table/rtb-0e2afc399c2a515e8",
            "id": "rtb-0e2afc399c2a515e8",
            "owner_id": "566027688242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05d82a114fd3d234a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform Private Route Table 1"
            },
            "tags_all": {
              "Name": "Terraform Private Route Table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0597359c1584b836d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraform_eip",
            "aws_nat_gateway.terraform_natgateway",
            "aws_subnet.terraform_public_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:566027688242:route-table/rtb-0689f6df33c86e819",
            "id": "rtb-0689f6df33c86e819",
            "owner_id": "566027688242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c68c40af066ea338",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform Public Route Table"
            },
            "tags_all": {
              "Name": "Terraform Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0597359c1584b836d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfcf2ea5e91e1973",
            "route_table_id": "rtb-0689f6df33c86e819",
            "subnet_id": "subnet-0ede0367df412870b"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_igw",
            "aws_route_table.terraform_rt_public",
            "aws_subnet.terraform_public_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:566027688242:security-group/sg-095afc13b87ab9c1b",
            "description": "Allow ssh inbound and all outbound traffic",
            "egress": [],
            "id": "sg-095afc13b87ab9c1b",
            "ingress": [],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "566027688242",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0597359c1584b836d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:566027688242:subnet/subnet-0fc1fe347d6f0c367",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc1fe347d6f0c367",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566027688242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform VPC Private Subnet 1"
            },
            "tags_all": {
              "Name": "Terraform VPC Private Subnet 1"
            },
            "vpc_id": "vpc-0597359c1584b836d"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:566027688242:subnet/subnet-0ede0367df412870b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ede0367df412870b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "566027688242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform VPC Public Subnet"
            },
            "tags_all": {
              "Name": "Terraform VPC Public Subnet"
            },
            "vpc_id": "vpc-0597359c1584b836d"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:566027688242:vpc/vpc-0597359c1584b836d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-083720726272d2f7c",
            "default_route_table_id": "rtb-0feb2dac30ecab331",
            "default_security_group_id": "sg-0611b13fee67948b2",
            "dhcp_options_id": "dopt-70ad6216",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0597359c1584b836d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0feb2dac30ecab331",
            "owner_id": "566027688242",
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:566027688242:security-group-rule/sgr-0d89bbed41b8d48c5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d89bbed41b8d48c5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095afc13b87ab9c1b",
            "security_group_rule_id": "sgr-0d89bbed41b8d48c5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:566027688242:security-group-rule/sgr-043858a98ea5e9534",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-043858a98ea5e9534",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-095afc13b87ab9c1b",
            "security_group_rule_id": "sgr-043858a98ea5e9534",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    }
  ]
}